# pytorch_cpp

./: LICENSE  README.md  transforms.hpp
AE2d/: CMakeLists.txt  README.md
AE2d/scripts/: test.sh
AE2d/src/: main.cpp  networks.cpp  networks.hpp  test.cpp  train.cpp  valid.cpp
AnoGAN2d/: CMakeLists.txt  README.md
AnoGAN2d/scripts/: anomaly_detection.sh  train.sh
AnoGAN2d/src/: anomaly_detection.cpp  main.cpp  test.cpp
Anomaly_Detection/AnoGAN2d/: CMakeLists.txt  README.md
Anomaly_Detection/DAGMM2d/: CMakeLists.txt  README.md
Anomaly_Detection/EGBAD2d/: CMakeLists.txt  README.md
Anomaly_Detection/GANomaly2d/: CMakeLists.txt  README.md
Anomaly_Detection/PaDiM/: CMakeLists.txt  README.md
Anomaly_Detection/PatchCore/: CMakeLists.txt  README.md
Anomaly_Detection/Skip-GANomaly2d/: CMakeLists.txt  README.md
ConvAE/: CMakeLists.txt
ConvAE/datasets/: hold_out.sh  k_fold.sh
ConvAE/include/: dataloader.hpp  loss.hpp
ConvAE/scripts/: test.sh  train.sh
ConvAE/src/: datasets.cpp  datasets.hpp  loss.cpp  loss.hpp  main.cpp  networks.cpp  progress.hpp  test.cpp  train.cpp  transforms.hpp
DAE2d/: CMakeLists.txt  README.md
DAE2d/scripts/: train.sh
DAE2d/src/: main.cpp  test.cpp
DAGMM2d/: CMakeLists.txt  README.md
DAGMM2d/scripts/: train.sh
DAGMM2d/src/: anomaly_detection.cpp  main.cpp  networks.cpp  networks.hpp  test.cpp  train.cpp  valid.cpp
DCGAN/: CMakeLists.txt  README.md
DCGAN/datasets/: hold_out.py  k_fold.py
DCGAN/src/: loss.cpp  loss.hpp  main.cpp  networks.cpp  networks.hpp  synth.cpp  test.cpp  train.cpp  valid.cpp
DDIM2d/: CMakeLists.txt
DDIM2d-v/: CMakeLists.txt
DDIM2d-v/src/: networks.cpp  networks.hpp  sample.cpp  train.cpp
DDIM2d/src/: synth.cpp  test.cpp  train.cpp
DDPM2d/: README.md
DDPM2d-v/scripts/: sample.sh  synth.sh
DDPM2d-v/src/: networks.cpp  networks.hpp  train.cpp
DDPM2d/scripts/: sample.sh  synth.sh  train.sh
DDPM2d/src/: synth.cpp
Dimensionality_Reduction/AE1d/: CMakeLists.txt  README.md
Dimensionality_Reduction/AE1d/datasets/: datasets.txt
Dimensionality_Reduction/AE1d/scripts/: test.sh  train.sh
Dimensionality_Reduction/AE1d/src/: loss.cpp  main.cpp  networks.cpp  networks.hpp  test.cpp  train.cpp  valid.cpp
Dimensionality_Reduction/AE2d/: CMakeLists.txt  README.md
Dimensionality_Reduction/DAE2d/: CMakeLists.txt  README.md
EGBAD2d/: CMakeLists.txt
EGBAD2d/scripts/: test.sh  train.sh
EGBAD2d/src/: main.cpp  networks.cpp  networks.hpp  test.cpp
Generative_Modeling/DCGAN/: CMakeLists.txt  README.md
Generative_Modeling/DDIM2d/: README.md
Generative_Modeling/DDIM2d-v/: README.md
Generative_Modeling/DDPM2d/: CMakeLists.txt  README.md
Generative_Modeling/DDPM2d-v/: CMakeLists.txt  README.md
Generative_Modeling/DiT/: CMakeLists.txt  README.md
Generative_Modeling/DiT-v/: CMakeLists.txt  README.md
Generative_Modeling/FM2d/: CMakeLists.txt  README.md
Generative_Modeling/Glow/: CMakeLists.txt  README.md
Generative_Modeling/LDM/: CMakeLists.txt  README.md
Generative_Modeling/LDM-v/: CMakeLists.txt  README.md
Generative_Modeling/PNDM2d/: CMakeLists.txt  README.md
Generative_Modeling/PNDM2d-v/: CMakeLists.txt  README.md
Generative_Modeling/PixelCNN-Gray/: CMakeLists.txt  README.md
Generative_Modeling/PixelCNN-RGB/: CMakeLists.txt  README.md
Generative_Modeling/PixelSNAIL-Gray/: CMakeLists.txt  README.md
Generative_Modeling/PixelSNAIL-RGB/: CMakeLists.txt  README.md
Generative_Modeling/Planar-Flow2d/: CMakeLists.txt  README.md
Generative_Modeling/RF2d/: CMakeLists.txt  README.md
Generative_Modeling/RF2d/scripts/: distill.sh  reflow.sh  sample.sh  synth.sh  test.sh  train.sh
Generative_Modeling/RF2d/src/: distill.cpp  main.cpp  networks.cpp  networks.hpp  reflow.cpp  sample.cpp  synth.cpp  test.cpp  train.cpp  valid.cpp
Generative_Modeling/Radial-Flow2d/: CMakeLists.txt  README.md
Generative_Modeling/Real-NVP2d/: CMakeLists.txt  README.md
Generative_Modeling/VAE2d/: CMakeLists.txt  README.md
Generative_Modeling/VQ-VAE/: CMakeLists.txt  README.md
Generative_Modeling/VQ-VAE-2/: CMakeLists.txt  README.md
Generative_Modeling/WAE2d_GAN/: CMakeLists.txt  README.md
Generative_Modeling/WAE2d_MMD/: CMakeLists.txt  README.md
Generative_Models/DCGAN/: CMakeLists.txt
Generative_Models/VAE2d/: CMakeLists.txt
Generative_Models/WAE2d_GAN/: README.md
Generative_Models/WAE2d_MMD/: CMakeLists.txt
Image-to-Image_Translation/CycleGAN/: CMakeLists.txt  README.md
Image-to-Image_Translation/Pix2Pix/: CMakeLists.txt  README.md
Image-to-Image_Translation/U-Net_Regression/: README.md
Image-to-Image_Translation/pix2pix/: CMakeLists.txt  README.md
Multiclass-Classification/AlexNet/: README.md
Multiclass-Classification/ResNet/: README.md
Multiclass-Classification/VGG/: README.md
Object_Detection/YOLOv3/: CMakeLists.txt  README.md
Object_Detection/YOLOv3/cfg/: anchor.txt  resize.txt
Object_Detection/YOLOv3/scripts/: demo.sh  detect.sh  test.sh  train.sh
Object_Detection/YOLOv3/src/: augmentation.hpp  demo.cpp  detect.cpp  detector.cpp  loss.cpp  loss.hpp  main.cpp  networks.cpp  networks.hpp  test.cpp  train.cpp  valid.cpp
SegNet/: CMakeLists.txt
U-Net/Regression/: CMakeLists.txt  README.md
U-Net/Regression/datasets/: hold_out.sh
U-Net/Regression/scripts/: test.sh  train.sh
U-Net/Regression/src/: loss.cpp  loss.hpp  main.cpp  networks.cpp  networks.hpp  test.cpp  train.cpp  valid.cpp
VAE/: CMakeLists.txt
VAE2d/: CMakeLists.txt  README.md
datasets/: datasets.txt
pix2pix/: CMakeLists.txt  README.md
scripts/: build_all.sh  build_list.txt  hold_out.sh  k_fold.sh  k_fold_2pair.sh  sample.sh  set_CIFAR10.py  set_CIFAR10.sh  set_CIFAR100.py  set_CIFAR100.sh  set_MNIST.py  set_MNIST.sh  set_MNIST1d.py  set_MNIST1d.sh  synth.sh  test1.sh  test3.sh  xml2txt.py  xml2txt.sh
src/: loss.cpp  sample.cpp  train2.cpp  train3.cpp
utils/: CMakeLists.txt  dataloader.cpp  dataloader.hpp  datasets.cpp  datasets.hpp  losses.cpp  losses.hpp  progress.cpp  progress.hpp  transforms.cpp  transforms.hpp  visualizer.cpp  visualizer.hpp
(+715 files in other folders)
